# openmaya-stub-generator

./: .gitignore  README.md  generate-stubs.bat  pyproject.toml  requirements.txt
generated-stubs/2026/: OpenMaya.pyi
generator/: README.MD  generate-stubs.bat  pyproject.toml
generator/src/: __init__.py  collect_required_imports.py  maya_info.py
generator/src/header/: __init__.py  header.pyi
generator/src/manual/: __init__.py
generator/src/manual/stubs/maya/api/: MDGContextGuard.pyi
generator/src/native_generator/: generate_functions.py  generate_variables.py  utils.py
generator/src/patch/: __init__.py  patch_bultins.py  patch_default_value_enum.py
generator/src/patch/documentation/: convert_type.py  patch_documentation.py
generator/src/patch/documentation/parser/: __init__.py  cached_request.py  signature.py
generator/src/patch/documentation/parser/OpenMaya2/: page.py
generator/src/patch/manual_fix/: patch_manualfix.py
generator/src/patch/manual_fix/resources/maya/api/OpenMaya/: method_arg_type.jsonc  method_return_type.jsonc  property_type.jsonc
generator/src/patch/manual_fix/resources/maya/api/OpenMayaRender/: method_arg_type.jsonc  method_return_type.jsonc
generator/src/patch/manual_fix/resources/maya/api/OpenMayaUI/: method_arg_type.jsonc
generator/test/patch/documentation/: test_convert_type.py
openmaya-stub-generator/documentation/: index.py
src/: __init__.py  __main__.py  collect_required_imports.py  flags.py  generator.py  maya_info.py  stub_types.py  template_header.pyi
src/documentation/: __init__.py  (+4 more)
test/: conftest.py
(+55 files in other folders)
