[project]
name = "open-maya-stub-generator"
version = "2026.0.0"
authors = [{ name = "Nils Soderman" }]
description = "Generate stubs for Autodesk Maya's Python API (OpenMaya)"
keywords = [
    "openmaya",
    "maya",
    "autodesk",
    "stub",
    "generator",
]
readme = "README.MD"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = ['Programming Language :: Python :: 3']
dynamic = ["dependencies"]

[build-system]
requires = ["hatchling >= 1.27", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
include = ["src/*"]
sources = { src = "open_maya_stub_generator" }

[tool.hatch.build.targets.sdist]
exclude = ["test/*"]